--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,4 +1,4 @@
 # Streamlit secrets configuration
 # Add your Gemini API key here to enable the Legal Chatbot
 
-GEMINI_API_KEY = ""
+GEMINI_API_KEY = "your_gemini_api_key_here"
