--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,29 @@
 # Core dependencies
 streamlit>=1.28.0
 pandas>=2.0.0
-matplotlib>=3.7.0
 numpy>=1.24.0
 
-# Data processing and web scraping
-beautifulsoup4>=4.12.0
-lxml>=4.9.0
+# HTTP requests
 requests>=2.31.0
 
+# Data processing
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
+pyarrow>=12.0.0
+
+# AI and LangChain
 langchain-google-genai>=1.0.0
 langchain-core>=0.1.0
+
+# Visualization
+altair>=5.0.0
 
 # Progress bars
 tqdm>=4.65.0
 
 # Optional: For enhanced data processing
-openpyxl>=3.1.0  # For Excel file support
-xlrd>=2.0.0      # For Excel file reading
+openpyxl>=3.1.0
+xlrd>=2.0.0
 
 # Optional: For advanced analytics
-seaborn>=0.12.0  # Enhanced plotting
-plotly>=5.15.0  # Interactive plots
-
-# Development and testing
-pytest>=7.4.0
-black>=23.0.0    # Code formatting
+plotly>=5.15.0
